[project]
authors = [{ name = "engeir", email = "engeir@pm.me" }]
dependencies = ["recipe-scrapers>=14.57.0", "pyyaml>=6.0"]
description = "Simple recipes scripts"
name = "simple-recipes-cookbook"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.rye]
dev-dependencies = []
managed = true
virtual = true
